# trino-python-client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  CLAUDE.md  Dockerfile  README.md  help  pyproject.toml  requirements.txt  run  setup.cfg  setup.py  tests_integration  tests_unit  tox.ini
.github/: CONTRIBUTING.md  DEVELOPMENT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: update_python_versions.py
.github/workflows/: ci.yml  nightly-ci.yml  release.yml  update-python-versions.yml
etc/: config-pre-466.properties  config.properties  jvm-pre-466.config  jvm.config  spooling-manager.properties
integration_tests/: conftest.py  fixtures.py  test_dbapi.py  test_sqlalchemy.py
presto/: __init__.py  auth.py  client.py  constants.py  dbapi.py  exceptions.py  logging.py  transaction.py
prestodb/: __init__.py  auth.py  client.py  constants.py  dbapi.py  exceptions.py  redirect.py  transaction.py
tests/: conftest.py  development_server.py  test_client.py  test_exceptions.py  test_http.py  test_logging.py  test_presto.py  test_sqlalchemy_url.py
tests/integration/: conftest.py  test_dbapi_integration.py  test_sqlalchemy_integration.py  test_types_integration.py
tests/sqlalchemy/: conftest.py  test_datatype_parse.py  test_datatype_split.py  test_dialect.py
tests/unit/: conftest.py  oauth_test_utils.py  test_auth_gssapi.py  test_client.py  test_client_session.py  test_client_spooling.py  test_dbapi.py  test_exceptions.py  test_executemany.py  test_http.py  test_mapper.py  test_spooling.py  test_transaction.py  test_types.py
trino/: __init__.py  _version.py  auth.py  client.py  constants.py  dbapi.py  exceptions.py  logging.py  mapper.py  sqlalchemy.py  transaction.py  types.py
trino_client/: __init__.py  _version.py  auth.py  client.py  constants.py  dbapi.py  exceptions.py  mapper.py  transaction.py  types.py
(+16 files in other folders)
